--- a/vue/exercicios/ifFor.html
+++ b/vue/exercicios/ifFor.html
@@ -8,8 +8,30 @@
 </head>
 <body class="exercicio">
 
+    <div id="app">
+        <p v-for="(aluno, i) in alunos">
+            {{i+1}} ) {{aluno.nome}} - {{aluno.nota}} - 
+            <span v-if="aluno.nota >=9">Quadro de Honra</span>
+            <span v-else-if="aluno.nota>= 7">Aprovado</span>
+            <span v-else-if="aluno.nota >=2"> Recuperaçao</span>
+            <span v-else> Reprovado</span>
+
+        </p>
+    </div>
+
     <script>
-        // ...
+        new Vue({
+            el: "#app",
+            data: {
+                alunos: [
+                    {nome: "Weslley", nota: 9.5},
+                    {nome: "Laisa", nota: 10},
+                    {nome: "Prado", nota: 10},
+                    {nome: "Rosa", nota: 10}
+
+                ]
+            }
+        })
     </script>
 </body>
 </html>
