--- a/vue/exercicios/componente.html
+++ b/vue/exercicios/componente.html
@@ -1,28 +1,56 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Componente</title>
     <link rel="stylesheet" href="/css/estilo.css">
     <script src="/js/vue.min.js"></script>
 </head>
+
 <body class="exercicio">
- <div id="app">
-     <saudacao nome="Ana"></saudacao>
- </div>
-    
+    <div id="app">
+        <saudacao nome="Ana"></saudacao>
+        <contador></contador>
+        <contador></contador>
+        <contador></contador>
+    </div>
+
 
     <script>
-        Vue.component('saudacao',{
-            props:['nome'],
+        Vue.component('saudacao', {
+            props: ['nome'],
             template: `
             <div> Bom dia {{ nome }} !</div>
-            `      
+            `
+        })
+        Vue.component('contador', {
+            data: function () {
+                return {
+                    contador: 0
+                }
+            },
+            methods: {
+                add() {
+                    this.contador++
+                }
+            },
+            template: `
+            <div> 
+                <span> {{ contador }}</span>
+                <button @click="add"> +1</button>
+                <button @click="contador--"> -1</button>
+
+                </div>
+            `
         })
 
-        new Vue ({
-            el:"#app"
+
+
+        new Vue({
+            el: "#app"
         })
     </script>
 </body>
+
 </html>
